fix story card wrapping, start story page 3

--- a/src/components/StoryCard/story-card.scss
+++ b/src/components/StoryCard/story-card.scss
@@ -3,8 +3,8 @@
   flex-direction: column;
   align-items: center;
   position: relative;
-  height: 80vh;
-
+  height: 100%;
+  width: 100%;
   @include respond(mobile) {
     flex-wrap: wrap;
     width: 100%;
@@ -23,7 +23,7 @@
     margin-bottom: 5rem;
   }
   &__inner {
-    height: 100%;
+    height: 70vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
