--- a/src/pages/StoriesPage/stories-page.scss
+++ b/src/pages/StoriesPage/stories-page.scss
@@ -41,8 +41,8 @@
     }
   }
   &__card-outter {
-    width: 30%;
-    max-height: auto;
+    width: 500px;
+    min-width: 300px;
     display: flex;
     justify-content: space-between;
     margin: 1rem;
